pwm idle button

--- a/htdocs/index.html
+++ b/htdocs/index.html
@@ -77,8 +77,8 @@
 
       <div class="button_container">
         <p>Actions</p>
+        <input value="Idle" type="button" onclick="robot.idle_pwm_channels(this, event)">
         <input value="Hello" type="button" onclick="robot.speak(this, 'hello, my name is assigato,,  i am a robot,, beep boop')">
-        <!--<input value="Address" type="button" onclick="App.robot_control.display_address()">-->
 
         <br/>
 
